fix: dialog closing transitions not showing on FireFox or apple devices

--- a/css/tokens.css
+++ b/css/tokens.css
@@ -253,45 +253,6 @@
           url('../assets/fonts/space-grotesk-v22-latin-700.ttf') format('truetype');
   }
 
-  /* ─────────────────────────────────────────
-     Light Mode settings
-  ───────────────────────────────────────── */
-
-  /*
-  @media (prefers-color-scheme: light) {
-      :root {
-          --primary-one: #006E1C;
-          --primary-two: #009927;
-          --primary-three: #6F7A6B;
-          --primary-five: #BECAB9;
-          --secondary-one: #8B5000;
-          --secondary-two: #BD6D00;
-          --secondary-three: #D47A00;
-          --secondary-four: #523D21;
-          --secondary-five: #D45800;
-          --neutral-one: #F1F1F1;
-          --neutral-two: #F0EDED;
-          --neutral-three: #E8E3E3;
-          --neutral-four: #DCD5D5;
-          --neutral-five: #D1C7C7;
-          --neutral-six: #C5B9B9;
-          --neutral-seven: #3F4A3C;
-          --neutral-nine: #1C1B1B;
-      }
-
-      .toggle-moon {
-          @apply hidden;
-      }
-
-      .toggle-sun {
-          @apply block;
-      }
-
-      .slider {
-          @apply translate-x-6.25;
-      }
-  }
-      */
 
   /* ─────────────────────────────────────────
      Starting States
